--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
             <img class="profile__photo" src="images/profilePhoto.jpg" alt="Фото профиля">
           </div>
           <div class="profile__info">
-            <h1 class="profile__user-name">Жак-Ив Кусто</h1>
-            <button class="profile__change" type="button"></button>
+            <div class="profile__info-container">
+              <h1 class="profile__user-name">Жак-Ив Кусто</h1>
+              <button class="profile__change" type="button"></button>
+            </div>
             <h2 class="profile__job">Исследователь океана</h2>
           </div>
         </div>
