--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <div class="popup popup_profile">
       <div class="popup__container">
-        <form class="popup__body popup_overlay" name="profileForm" novalidate>
+        <form class="popup__body popup__overlay" name="profileForm" novalidate>
           <h2 class="popup__title">Редактировать профиль</h2>
           <input id="name-input" class="popup__input popup__input_type_name" type="text" name="UserName" required minlength="2" maxlength="40">
           <span class="name-input-error popup__input-error"></span>
@@ -65,7 +65,7 @@
 
     <div class="popup popup_new-post">
       <div class="popup__container">
-        <form class="popup__body popup_overlay" name="addPostForm" novalidate>
+        <form class="popup__body popup__overlay" name="addPostForm" novalidate>
           <h2 class="popup__title">Новое место</h2>
           <input id="new-place-input" class="popup__input popup__input_type_place" type="text" name="NewPlace" value="" placeholder="Название" required minlength="1" maxlength="30">
           <span class="new-place-input-error popup__input-error"></span>
@@ -79,7 +79,7 @@
 
     <div class="popup popup_photo">
       <div class="popup__container">
-        <div class="popup__photo-group popup_overlay">
+        <div class="popup__photo-group popup__overlay">
           <img class="popup__image" src="#" alt="Просмотр фото">
           <h3 class="popup__photo-title"></h3>
           <button class="popup__close popup__close_photo" type="button"></button>
