--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
         </div>
       </div>
     </div>
-    <script src="./script/index.js"></script>
-    <script src="./script/validate.js"></script>
+    <script type="module" src="./script/index.js"></script>
+    <!-- <script type="module" src="./script/validate.js"></script>
+    <script type="module" src="./script/card.js"></script> -->
   </body>
 </html>
