--- a/src/index.html
+++ b/src/index.html
@@ -53,9 +53,9 @@
       <div class="popup__container">
         <form class="popup__body popup__overlay" name="profileForm" novalidate>
           <h2 class="popup__title">Редактировать профиль</h2>
-          <input id="name-input" class="popup__input popup__input_type_name" type="text" name="UserName" required minlength="2" maxlength="40">
+          <input id="name-input" class="popup__input popup__input_type_name" type="text" name="userName" required minlength="2" maxlength="40">
           <span class="name-input-error popup__input-error"></span>
-          <input id="job-input" class="popup__input popup__input_type_job" type="text" name="UserJob" required minlength="2" maxlength="200">
+          <input id="job-input" class="popup__input popup__input_type_job" type="text" name="userJob" required minlength="2" maxlength="200">
           <span class="job-input-error popup__input-error"></span>
           <input class="popup__submit" type="submit" value="Сохранить">
           <button class="popup__close popup__close_profile" type="button"></button>
